--- a/src/app.css
+++ b/src/app.css
@@ -64,6 +64,10 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;  
+    @apply bg-background text-foreground;
+  }
+
+  .toast {
+    @apply font-sans;
   }
 }
